--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.1.7",
     "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.372.0",
     "next": "14.2.2",
     "react": "^18",
